# SIGIR26-Synthesized-Information-Needs

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/interim/: qrels_metadata.json
data/processed/: similarity-robust-topics-masked.tsv  topic-similarity-robust-topics-masked.tsv  topic-similarity-robust-topics-q1.tsv  topic-similarity-robust-topics.tsv
data/raw/prompts/: -DNA-zero-shot-dl.yaml  -DNA-zero-shot-masked-description-narrative.yaml  -DNA-zero-shot-masked-description.yaml  -DNA-zero-shot-masked-narrative.yaml  -DNA-zero-shot-masked-title-description.yaml  -DNA-zero-shot-masked-title-narrative.yaml  -DNA-zero-shot-masked-title.yaml  qrel_zeroshot_bing_title_description.yaml  (+22 more)
notebooks/: analyze-longeval-deep.ipynb  dataset-stats.ipynb  dl21.ipynb  evaluate-alignment.ipynb  evaluate-clarity.ipynb  evaluate-distinguishability.ipynb  evaluate-pre-requisites-dl19.ipynb  evaluate-pre-requisites.ipynb  evaluate-topic.ipynb  evaluate.ipynb  evaluate_qrels.ipynb  evaluation-alignment.ipynb  evaluation-clarity.ipynb  evaluation-pre-requisites.ipynb  exp-2.ipynb  generate-qrels.ipynb  generate-topics-llama.ipynb  generate-topics.ipynb  pretest.ipynb  query_variants_test.ipynb  similarity.ipynb
notebooks/dl19/: evaluate-dl19-alignment.ipynb  evaluate-dl19-clarity.ipynb  evaluate-dl19-pre-requisites.ipynb  evaluate-topic-similarity-dl19.ipynb  test-1.py
notebooks/longeval/: analyze-longeval-deep.ipynb  evaluate-alignment-longeval.ipynb  evaluate-pre-requisites-longeval.ipynb
notebooks/robust/: analyze-robust.ipynb  evaluate-alignment.ipynb  evaluate-pre-requisites.ipynb  evaluate-topic.ipynb
scripts/: analyze-factors.ipynb  create-plot-label-alignment.ipynb  create-plot-label-significance.ipynb  create-plot-topic-similarity-no-query.py  create-plot-topic-similarity-q1.py  create-plot-topic-similarity-query-variants.py  create-plot-topic-similarity.ipynb  create-plot-topic-similarity.py  create-table-agreement-of-topic-features.py  create-table-alignment-of-labels-example.py  create-table-alignment-of-labels-robust.py  create-table-alignment-of-labels.py  create-table-foo.py  create-table-leave-one-group-out.py  create-table-topic-similarity-masked.py  create-table-topic-similarity.py  dataset-stats.ipynb  evaluate-label-alignment.py  evaluate-topic-similarity.py  evaluate_alignment.py  exp2-llm-judge.py  exp2.1-llm-judge.py  gen-qrels.py  gen-topics.py  generate-trec-topics.py  parse-original-dna-qrels.py  qrels-dl21-reference.sh  qrels-dl21-topics-generated.sh  qrels-metadata.py  qrels-qwen30.sh  qrels-robust-reference.sh  qrels-robust-topics-generated.sh  qrels-robust-topics-masked.sh  topics-dl21.sh  topics-qwen30.sh  topics-robust-topics.sh  topics-robust.sh
src/: config.py  data.py  io.py  llm_connections.py  utils.py
topic-gen/: .gitignore  README.md  pyproject.toml
topic-gen/tests/: conftest.py
topic-gen/tests/data/: test-qrels-3.qrels  test-qrels-other.qrels  test-run1.run  test-run2.run  test-run3.run  test-topic-1.topics  test-topic-2.topics
topic-gen/tests/evaluate/: test_bootstrap.py  test_experiments.py  test_measures_agreement.py  test_utils.py
topic-gen/tests/generate/: test_status_bar.py
topic-gen/topic_gen/: __init__.py  generate.py  models.py
topic-gen/topic_gen/evaluate/: __init__.py  io.py  measures_agreement.py  measures_agreement_multiple.py  measures_effectiveness.py  utils.py
topic-gen/topic_gen/prompts/: -DNA-zero-shot.yaml  -RDNAM-zero-shot.yaml  isearch-background.yaml  isearch-base.yaml  isearch-new-base.yaml  isearch-original.yaml  qrel_zeroshot_bing.yaml  qrels_bing_fewshot.yaml  trec-base.yaml
(+11279 files in other folders)
