[project]
authors = [
  {name = "Jüri Keller", email = "jueri.keller@th-koeln.de"},
]
dependencies = [
  "ipykernel (>=6.30.0,<7.0.0)",
  "ir-datasets (>=0.5.11,<0.6.0)",
  "click (>=8.2.1,<9.0.0)",
  "pandas (>=2.3.1,<3.0.0)",
  "langchain-google-genai (>=2.1.8,<3.0.0)",
  "langchain-openai (>=0.2.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "evaluate (>=0.4.5,<0.5.0)",
  "scikit-learn (>=1.7.1,<2.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "sentence-transformers (>=5.1.1,<6.0.0)",
  "bert-score (>=0.3.13,<0.4.0)",
  "tirex-tracker (>=0.2.16,<0.3.0)",
  "statsmodels (>=0.14.5,<0.15.0)",
  # "ir-datasets-longeval @ git+https://github.com/clef-longeval/ir-datasets-longeval.git@main",
  "krippendorff (>=0.8.2,<0.9.0)",
  "datasets (>=4.4.1,<5.0.0)",
]
description = ""
name = "src"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
packages = [
    { include = "src", from = "." },
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.vllm.dependencies]
vllm = "^0.10.0"
langchain-community = "^0.3.27"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.7"
topic-gen = {path = "topic-gen", develop = true}
ir-measures = "^0.4.1"

