[project]
name = "conf26-generating-topics"
version = "0.1.0"
dependencies = [
    "absl-py>=2.3.1",
    "click>=8.3.1",
    "datasets>=4.4.2",
    "ipykernel>=7.1.0",
    "ir-datasets>=0.5.11",
    "ir-datasets-longeval>=0.0.11",
    "langchain-openai>=1.1.6",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "tirex-tracker>=0.2.18",
    "topic-gen[evaluate]",
    "topic-gen",
    "bert-score>=0.3.13",
    "evaluate>=0.4.6",
    "scipy>=1.16.3",
    "sentence-transformers>=5.2.0",
    "absl-py>=2.3.1",
    "nltk>=3.9.2",
    "rouge-score>=0.1.2",
]

[tool.uv.workspace]
members = ["topic-gen"]

[tool.uv.sources]
topic-gen = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
